feat: Add names to testimonials and internationalize
This change updates the `Testimonials` component to use translation keys for names, aligning with the existing structure for roles and quotes. It also populates the `name` fields within the translation files for English, Spanish, and Arabic, improving the internationalization of the testimonials section.

--- a/public/locales/ar/testimonials.json
+++ b/public/locales/ar/testimonials.json
@@ -1,24 +1,33 @@
 {
     "testimonials.title": "قصص نجاح العملاء",
     "testimonials.materials.subtitle": "موثوق به من قبل رواد البناء والمهندسين المعماريين في جميع أنحاء العالم.",
-    "testimonials.materials.quote1": "وفرت لنا خبرة مجموعة بزرگی في توريد الأخشاب وقتًا وميزانية كبيرة في أحدث مشروع فندقي لدينا. كانت الجودة لا تشوبها شائبة.",
+    "testimonials.materials.name1": "جون كارتر",
     "testimonials.materials.role1": "كبير المهندسين المعماريين، ستوديو فالنسيا للتصميم",
-    "testimonials.materials.quote2": "ساعدتنا استشاراتهم حول موعد شراء المواد السائبة على تجنب ارتفاع الأسعار في عام 2023. شركاء استراتيجيون حقيقيون.",
+    "testimonials.materials.quote1": "وفرت لنا خبرة مجموعة بزرگی في توريد الأخشاب وقتًا وميزانية كبيرة في أحدث مشروع فندقي لدينا. كانت الجودة لا تشوبها شائبة.",
+    "testimonials.materials.name2": "لي وانغ",
     "testimonials.materials.role2": "مدير المشتريات، شركة بيلد تك للإنشاءات",
-    "testimonials.materials.quote3": "موثوق وشفاف ومطلع بشكل لا يصدق على أسواق الأخشاب العالمية.",
+    "testimonials.materials.quote2": "ساعدتنا استشاراتهم حول موعد شراء المواد السائبة على تجنب ارتفاع الأسعار في عام 2023. شركاء استراتيجيون حقيقيون.",
+    "testimonials.materials.name3": "عمر حسن",
     "testimonials.materials.role3": "مدير، شركة الواحة لتصنيع الأثاث",
+    "testimonials.materials.quote3": "موثوق وشفاف ومطلع بشكل لا يصدق على أسواق الأخشاب العالمية.",
     "testimonials.property.subtitle": "توجيه المستثمرين إلى فرص عقارية مربحة.",
+    "testimonials.property.name1": "صوفيا مولر",
+    "testimonials.property.role1": "مستثمرة من أصحاب الثروات، سويسرا",
     "testimonials.property.quote1": "مجموعة بزرگی أتاحت لنا فرصة الوصول إلى فيلا حصرية غير معروضة في السوق في تلال الإمارات لم نتمكن من إيجادها في أي مكان آخر. كانت قدرتهم على التفاوض وحفظ السرية استثنائية.",
-    "testimonials.property.role1": "مستثمر من أصحاب الثروات، سويسرا",
-    "testimonials.property.quote2": "الفحص القانوني والضريبي الشامل الذي أجروه منحنا راحة بال تامة. شعرنا أن استثمار الملايين في دبي كان آمنًا وشفافًا من البداية إلى النهاية.",
+    "testimonials.property.name2": "جيمس ويلسون",
     "testimonials.property.role2": "مدير مكتب عائلي، لندن",
+    "testimonials.property.quote2": "الفحص القانوني والضريبي الشامل الذي أجروه منحنا راحة بال تامة. شعرنا أن استثمار الملايين في دبي كان آمنًا وشفافًا من البداية إلى النهاية.",
+    "testimonials.property.name3": "عائشة الفهيم",
+    "testimonials.property.role3": "رائدة أعمال تقنية، سنغافورة",
     "testimonials.property.quote3": "كمستثمر أجنبي، كانت تقاريرهم الأسبوعية عن المشروع وإدارتهم الدقيقة لا تقدر بثمن. كانت تجربة استثمارية ناجحة دون أي تدخل مني.",
-    "testimonials.property.role3": "رائد أعمال تقني، سنغافورة",
     "testimonials.it.subtitle": "شهادات من أصحاب الأعمال الذين توقفوا عن التخمين وبدأوا في النمو.",
+    "testimonials.it.name1": "أليكس جونسون",
+    "testimonials.it.role1": "الرئيس التنفيذي للتجارة الإلكترونية",
     "testimonials.it.quote1": "أسفرت أتمتة مسار المبيعات عن زيادة بنسبة 312٪ في الطلبات عبر الإنترنت خلال الشهر الأول. يركز فريقنا الآن على الاستراتيجية، وليس المتابعة اليدوية.",
-    "testimonials.it.role1": "رضا م.، الرئيس التنفيذي لمتجر إلكتروني",
+    "testimonials.it.name2": "ماريا غارسيا",
+    "testimonials.it.role2": "مديرة التسويق",
     "testimonials.it.quote2": "كنا نهدر 70٪ من ميزانيتنا الإعلانية. منحنا تحسين الإعلانات بالذكاء الاصطناعي عائدًا على الإنفاق الإعلاني يبلغ 8.7 ضعفًا في ثلاثة أسابيع فقط. إنه يغير قواعد اللعبة.",
-    "testimonials.it.role2": "سارة أ.، مديرة التسويق",
-    "testimonials.it.quote3": "كان الإعداد في 48 ساعة حقيقيًا. كنا نعمل ونرى عملاء محتملين جدد على لوحة التحكم بحلول اليوم الثاني. والجزء الأفضل؟ لم أحتج إلى لمس سطر واحد من التعليمات البرمجية.",
-    "testimonials.it.role3": "مهدي ك.، مؤسس شركة ناشئة"
+    "testimonials.it.name3": "كينجي تاناكا",
+    "testimonials.it.role3": "مؤسس شركة ناشئة",
+    "testimonials.it.quote3": "كان الإعداد في 48 ساعة حقيقيًا. كنا نعمل ونرى عملاء محتملين جدد على لوحة التحكم بحلول اليوم الثاني. والجزء الأفضل؟ لم أحتج إلى لمس سطر واحد من التعليمات البرمجية."
 }
