--- a/public/locales/en/testimonials.json
+++ b/public/locales/en/testimonials.json
@@ -1,24 +1,33 @@
 {
     "testimonials.title": "Client Success Stories",
     "testimonials.materials.subtitle": "Trusted by construction leaders and architects worldwide.",
-    "testimonials.materials.quote1": "Bozorgi Group's expertise in wood sourcing saved us significant time and budget on our latest hotel project. The quality was impeccable.",
+    "testimonials.materials.name1": "John Carter",
     "testimonials.materials.role1": "Senior Architect, Valencia Design Studio",
-    "testimonials.materials.quote2": "Their consulting on when to buy bulk materials helped us avoid the 2023 price surge. True strategic partners.",
+    "testimonials.materials.quote1": "Bozorgi Group's expertise in wood sourcing saved us significant time and budget on our latest hotel project. The quality was impeccable.",
+    "testimonials.materials.name2": "Li Wang",
     "testimonials.materials.role2": "Procurement Manager, BuildTech Construction",
-    "testimonials.materials.quote3": "Reliable, transparent, and incredibly knowledgeable about global timber markets.",
+    "testimonials.materials.quote2": "Their consulting on when to buy bulk materials helped us avoid the 2023 price surge. True strategic partners.",
+    "testimonials.materials.name3": "Omar Hassan",
     "testimonials.materials.role3": "Director, Al-Waha Furniture Manufacturing",
+    "testimonials.materials.quote3": "Reliable, transparent, and incredibly knowledgeable about global timber markets.",
     "testimonials.property.subtitle": "Guiding investors to profitable real estate opportunities.",
-    "testimonials.property.quote1": "Bozorgi Group provided us with access to an off-market villa in Emirates Hills we couldn't find anywhere else. Their discretion and negotiation skills were exceptional.",
+    "testimonials.property.name1": "Sophia Müller",
     "testimonials.property.role1": "High-Net-Worth Investor, Switzerland",
-    "testimonials.property.quote2": "The comprehensive legal and tax diligence they performed gave us complete peace of mind. Investing millions in Dubai felt secure and transparent from start to finish.",
+    "testimonials.property.quote1": "Bozorgi Group provided us with access to an off-market villa in Emirates Hills we couldn't find anywhere else. Their discretion and negotiation skills were exceptional.",
+    "testimonials.property.name2": "James Wilson",
     "testimonials.property.role2": "Family Office Manager, London",
-    "testimonials.property.quote3": "As an overseas investor, their weekly project reports and meticulous management were invaluable. It was a completely hands-off experience with a fantastic outcome.",
+    "testimonials.property.quote2": "The comprehensive legal and tax diligence they performed gave us complete peace of mind. Investing millions in Dubai felt secure and transparent from start to finish.",
+    "testimonials.property.name3": "Aisha Al-Fahim",
     "testimonials.property.role3": "Tech Entrepreneur, Singapore",
+    "testimonials.property.quote3": "As an overseas investor, their weekly project reports and meticulous management were invaluable. It was a completely hands-off experience with a fantastic outcome.",
     "testimonials.it.subtitle": "Proof from business owners who stopped guessing and started growing.",
+    "testimonials.it.name1": "Alex Johnson",
+    "testimonials.it.role1": "E-commerce CEO",
     "testimonials.it.quote1": "The sales funnel automation resulted in a 312% increase in online orders within the first month. Our team is now focused on strategy, not manual follow-ups.",
-    "testimonials.it.role1": "Reza M., e-commerce CEO",
+    "testimonials.it.name2": "Maria Garcia",
+    "testimonials.it.role2": "Marketing Director",
     "testimonials.it.quote2": "We were wasting 70% of our ad budget. Their AI ad optimization gave us an 8.7x ROAS in just three weeks. It's a game-changer.",
-    "testimonials.it.role2": "Sarah A., Marketing Director",
-    "testimonials.it.quote3": "The 48-hour setup was real. We were live and seeing new leads on the dashboard by day two. The best part? I didn't need to touch a line of code.",
-    "testimonials.it.role3": "Mahdi K., Startup Founder"
+    "testimonials.it.name3": "Kenji Tanaka",
+    "testimonials.it.role3": "Startup Founder",
+    "testimonials.it.quote3": "The 48-hour setup was real. We were live and seeing new leads on the dashboard by day two. The best part? I didn't need to touch a line of code."
 }
