--- a/public/locales/es/testimonials.json
+++ b/public/locales/es/testimonials.json
@@ -1,24 +1,33 @@
 {
     "testimonials.title": "Historias de Éxito",
     "testimonials.materials.subtitle": "Con la confianza de líderes de la construcción y arquitectos de todo el mundo.",
-    "testimonials.materials.quote1": "La experiencia de Bozorgi Group en el abastecimiento de madera nos ahorró mucho tiempo y presupuesto en nuestro último proyecto hotelero.",
+    "testimonials.materials.name1": "John Carter",
     "testimonials.materials.role1": "Arquitecto Senior, Valencia Design Studio",
-    "testimonials.materials.quote2": "Su consultoría sobre cuándo comprar materiales a granel nos ayudó a evitar el aumento de precios de 2023. Verdaderos socios estratégicos.",
+    "testimonials.materials.quote1": "La experiencia de Bozorgi Group en el abastecimiento de madera nos ahorró mucho tiempo y presupuesto en nuestro último proyecto hotelero.",
+    "testimonials.materials.name2": "Li Wang",
     "testimonials.materials.role2": "Gerente de Compras, BuildTech Construction",
-    "testimonials.materials.quote3": "Fiable, transparente e increíblemente conocedor de los mercados mundiales de madera.",
+    "testimonials.materials.quote2": "Su consultoría sobre cuándo comprar materiales a granel nos ayudó a evitar el aumento de precios de 2023. Verdaderos socios estratégicos.",
+    "testimonials.materials.name3": "Omar Hassan",
     "testimonials.materials.role3": "Director, Al-Waha Furniture Manufacturing",
+    "testimonials.materials.quote3": "Fiable, transparente e increíblemente conocedor de los mercados mundiales de madera.",
     "testimonials.property.subtitle": "Guiando a los inversores hacia oportunidades inmobiliarias rentables.",
+    "testimonials.property.name1": "Sophia Müller",
+    "testimonials.property.role1": "Inversora de Alto Patrimonio, Suiza",
     "testimonials.property.quote1": "Bozorgi Group nos dio acceso a una villa fuera del mercado en Emirates Hills que no pudimos encontrar en ningún otro lugar. Su discreción y habilidades de negociación fueron excepcionales.",
-    "testimonials.property.role1": "Inversor de Alto Patrimonio, Suiza",
-    "testimonials.property.quote2": "La exhaustiva diligencia legal y fiscal que realizaron nos dio una tranquilidad total. Invertir millones en Dubái se sintió seguro y transparente de principio a fin.",
+    "testimonials.property.name2": "James Wilson",
     "testimonials.property.role2": "Gerente de Family Office, Londres",
+    "testimonials.property.quote2": "La exhaustiva diligencia legal y fiscal que realizaron nos dio una tranquilidad total. Invertir millones en Dubái se sintió seguro y transparente de principio a fin.",
+    "testimonials.property.name3": "Aisha Al-Fahim",
+    "testimonials.property.role3": "Emprendedora Tecnológica, Singapur",
     "testimonials.property.quote3": "Como inversor extranjero, sus informes semanales del proyecto y su gestión meticulosa fueron invaluables. Fue una experiencia completamente delegada con un resultado fantástico.",
-    "testimonials.property.role3": "Emprendedor Tecnológico, Singapur",
     "testimonials.it.subtitle": "Pruebas de dueños de negocios que dejaron de adivinar y comenzaron a crecer.",
+    "testimonials.it.name1": "Alex Johnson",
+    "testimonials.it.role1": "CEO de E-commerce",
     "testimonials.it.quote1": "La automatización del embudo de ventas resultó en un aumento del 312% en los pedidos en línea durante el primer mes. Nuestro equipo ahora se centra en la estrategia, no en seguimientos manuales.",
-    "testimonials.it.role1": "Reza M., CEO de comercio electrónico",
+    "testimonials.it.name2": "Maria Garcia",
+    "testimonials.it.role2": "Directora de Marketing",
     "testimonials.it.quote2": "Estábamos desperdiciando el 70% de nuestro presupuesto publicitario. Su optimización de anuncios con IA nos dio un ROAS de 8.7x en solo tres semanas. Es un cambio radical.",
-    "testimonials.it.role2": "Sarah A., Directora de Marketing",
-    "testimonials.it.quote3": "La configuración en 48 horas fue real. Estábamos en vivo y viendo nuevos clientes potenciales en el tablero para el segundo día. ¿La mejor parte? No tuve que tocar una línea de código.",
-    "testimonials.it.role3": "Mahdi K., Fundador de Startup"
+    "testimonials.it.name3": "Kenji Tanaka",
+    "testimonials.it.role3": "Fundador de Startup",
+    "testimonials.it.quote3": "La configuración en 48 horas fue real. Estábamos en vivo y viendo nuevos clientes potenciales en el tablero para el segundo día. ¿La mejor parte? No tuve que tocar una línea de código."
 }
